# pypbt

./: .readthedocs.yaml  BACKLOG  Makefile  README.md  index.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  rtd-requirements.txt  setup.cfg
.github/workflows/: release_tagged_versions.yaml
docs/: Gemfile  _config.yml  code.md  developing-guidelines.md  documentation.md  index.md  requirements.txt  setup.md
docs/dev/: VISION.md  documento.md  notas-para-desarrolladores.md  notas.txt  pof.py  recursive_domains.md  snippest.py
docs/source/: conf.py  examples.md  index.rst  presentation.md
documentation/: api.md  index.md  requirements.txt
documentation/explanation/: index.md
documentation/howtos/: index.md
documentation/tutorials/: index.md
examples/: custom_domain.py  mixed.py  recursive_domains_props.py  run_props.py  show_samples.py  simple_props.py
src/pypbt/: __init__.py  domain.py  domains.py  quantifier.py  quantifiers.py  runner.py  state_machine.py
src/pypbt/runner/: runners.py
tests/: test_domains.py  test_quantifiers.py  test_utils.py
