[tool.poetry]
name = "pypbt"
version = "0.2.1"
description = "Library of functions to write Property Based Tests in python"
authors = ["David Cabrero Souto <david.cabrero@madsgroup.org>"]
license = "GPL-2.0-only"
readme = 'README.md'
homepage = 'https://github.com/cabrero/pypbt'
documentation = 'https://pypbt.readthedocs.io/en/latest/'
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]


[tool.poetry.urls]
"Bug Tracker" = 'https://github.com/cabrero/pypbt/issues'


[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"


[tool.poetry.scripts]
pypbt = 'pypbt:main'


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocs-autorefs = "^0.4.1"
mkdocstrings-python = "^0.7.1"
hypothesis = "^6.52.3"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
