[metadata]
name = PyPBT
version = 0.0.1
url = https://github.com/cabrero/pypbt
author = David Cabrero Souto
author_email = "David Cabrero Souto" <david.cabrero@udc.es>
description = "Library of functions to write Property Based Tests in python"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-only
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
project_urls =
    Documentation = https://pypbt.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/cabrero/pypbt/issues
    

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9


[options.packages.find]
where = src
exclude =
    test*


[options.entry_points]
console_scripts =
    pypbt = pypbt.runner:main


[tool:pytest]
testpaths = tests
